--- a/last-hearth-landing/src/index.html
+++ b/last-hearth-landing/src/index.html
@@ -12,40 +12,9 @@
             href="https://fonts.googleapis.com/css2?family=Almendra:ital,wght@0,400;0,700;1,400;1,700&family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Cormorant+Unicase:wght@300;400;500;600;700&family=Viaoda+Libre&display=swap"
             rel="stylesheet"
         />
+        <script src="https://app.rybbit.io/api/script.js" data-site-id="541e3d3ca687" async defer></script>
     </head>
     <body>
         <app-root></app-root>
-
-        <script type="text/javascript">
-            (function (m, e, t, r, i, k, a) {
-                m[i] =
-                    m[i] ||
-                    function () {
-                        (m[i].a = m[i].a || []).push(arguments);
-                    };
-                m[i].l = 1 * new Date();
-                for (var j = 0; j < document.scripts.length; j++) {
-                    if (document.scripts[j].src === r) {
-                        return;
-                    }
-                }
-                (k = e.createElement(t)),
-                    (a = e.getElementsByTagName(t)[0]),
-                    (k.async = 1),
-                    (k.src = r),
-                    a.parentNode.insertBefore(k, a);
-            })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-            ym(105204681, "init", {
-                clickmap: true,
-                trackLinks: true,
-                accurateTrackBounce: true,
-            });
-        </script>
-        <noscript>
-            <div>
-                <img src="https://mc.yandex.ru/watch/105204681" style="position: absolute; left: -9999px" alt="" />
-            </div>
-        </noscript>
     </body>
 </html>
