--- a/last-hearth-landing/src/index.html
+++ b/last-hearth-landing/src/index.html
@@ -12,7 +12,20 @@
             href="https://fonts.googleapis.com/css2?family=Almendra:ital,wght@0,400;0,700;1,400;1,700&family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Cormorant+Unicase:wght@300;400;500;600;700&family=Viaoda+Libre&display=swap"
             rel="stylesheet"
         />
-        <script src="https://app.rybbit.io/api/script.js" data-site-id="541e3d3ca687" async defer></script>
+        <script type="text/javascript">
+            (function (c, l, a, r, i, t, y) {
+                c[a] =
+                    c[a] ||
+                    function () {
+                        (c[a].q = c[a].q || []).push(arguments);
+                    };
+                t = l.createElement(r);
+                t.async = 1;
+                t.src = "https://www.clarity.ms/tag/" + i;
+                y = l.getElementsByTagName(r)[0];
+                y.parentNode.insertBefore(t, y);
+            })(window, document, "clarity", "script", "u3k2hyqs0a");
+        </script>
     </head>
     <body>
         <app-root></app-root>
